--- a/OCLP/.classpath
+++ b/OCLP/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6_g.jar"/>
 	<classpathentry kind="lib" path="G:/Applications/apache-tomcat-8.5.24-windows-x64/apache-tomcat-8.5.24/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NikhileshSubramanian/Downloads/java-mail-1.4.4.jar/java-mail-1.4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NikhileshSubramanian/Downloads/activation-1.0.2.jar/activation-1.0.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
