--- a/OCLP/.classpath
+++ b/OCLP/.classpath
@@ -15,7 +15,11 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6_g.jar"/>
 	<classpathentry kind="lib" path="G:/Applications/apache-tomcat-8.5.24-windows-x64/apache-tomcat-8.5.24/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NikhileshSubramanian/Downloads/java-mail-1.4.4.jar/java-mail-1.4.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NikhileshSubramanian/Downloads/activation-1.0.2.jar/activation-1.0.2.jar"/>
+	<classpathentry kind="lib" path="G:/Frameworks/javamail1_4_5/javamail-1.4.5/mail.jar"/>
+	<classpathentry kind="lib" path="G:/Frameworks/javamail1_4_5/javamail-1.4.5/lib/dsn.jar"/>
+	<classpathentry kind="lib" path="G:/Frameworks/javamail1_4_5/javamail-1.4.5/lib/imap.jar"/>
+	<classpathentry kind="lib" path="G:/Frameworks/javamail1_4_5/javamail-1.4.5/lib/mailapi.jar"/>
+	<classpathentry kind="lib" path="G:/Frameworks/javamail1_4_5/javamail-1.4.5/lib/pop3.jar"/>
+	<classpathentry kind="lib" path="G:/Frameworks/javamail1_4_5/javamail-1.4.5/lib/smtp.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
